Removed redundant test cases and made them more atomic addressing feedback
Signed-off-by: Nana-EC <56320167+Nana-EC@users.noreply.github.com>